objects/IA_Decline_Reasons__mdt.object
<CustomObject>
    <description>IA decline reasons. This is customer-facing languages that matches to internal IA decline reasons. Program Specialists communicate these to the customer in the Adverse Action letter.</description>
    <fields>
        <fullName>AA_Letter_Priority__c</fullName>
        <description>1 = Objective
2 = Subjective</description>
        <inlineHelpText>1 = Objective
2 = Subjective</inlineHelpText>
        <label>AA Letter Priority</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AA_Letter__c</fullName>
        <description>Language on Adverse Action Letter</description>
        <label>AA Letter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IA_Decline_Reasons__c</fullName>
        <description>IA submits decline reason to peer. Suggests the opportunity should be closed lost.</description>
        <label>IA Decline Reasons</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Decline_Reason__c</fullName>
        <description>Customer-facing decline reasons. Communicated to customer by PS.</description>
        <label>PS Decline Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>IA Decline Reasons - Customer Facing</label>
    <listViews>
        <fullName>All_IA</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>AA_Letter__c</columns>
        <columns>Category__c</columns>
        <columns>IA_Decline_Reasons__c</columns>
        <columns>PS_Decline_Reason__c</columns>
        <columns>AA_Letter_Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All-IA</label>
    </listViews>
    <pluralLabel>IA Decline Reasons</pluralLabel>
</CustomObject>